--- a/styles.css
+++ b/styles.css
@@ -20,6 +20,7 @@ header
     display: flex;
     justify-content: space-between;
     align-items: center;
+    z-index: 20;
 }
 
 header .logo
@@ -60,8 +61,55 @@ header ul li a.active
     color: #2b1055;
 }
 
+section {
+    position: relative;
+    width: 100%;
+    height: 100vh;
+    padding: 100px;
+}
 
-.block1 {
+section img
+{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    pointer-events: none;
+}
+section img#white_bg{
+    z-index: -1;
+    mix-blend-mode: multiply;
+    
+}
+section img#profilePic{
+    z-index: -1;
+    width: 100%;
+    mix-blend-mode:lighten;
+}
+/* .block1 {
     display: flexbox;
     align-items: center;
+    z-index: 1000;
+} */
+
+#text1{
+    position: absolute;
+    font-size: 1in;
+    color:hsl(0, 10%, 37%);
+    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    margin-top: 5%;
+    margin-left: 20%;
+}
+
+#btn {
+    text-decoration: none;
+    padding: 10px 30px;
+    border-radius: 40px;
+    color: #6f6ccb;
+    background:hsl(0, 0%, 100%);
+    font-size: 1.5em;
+    
+    
 }
