--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@ body {
 
 header
 {
-    background-color: #2a105573;
+    background-color: #575757;
     position: absolute;
     top: 0;
     left: 0;
@@ -86,9 +86,15 @@ header ul li a.active
 }
 
 .sec1 #sec1-1{
-    grid-column: 2;
+    margin-left: 0%;
+    grid-column: 1/3;
     grid-row: 2;
 }
+.sec1 #sec1-1 h2{
+    margin-top: -10%;
+    margin-bottom:5%;
+}
+
 
 .sec1 p {
     grid-column: 1;
