--- a/styles.css
+++ b/styles.css
@@ -115,3 +115,26 @@ header ul li a.active
     color: #000000;
     font-size: 1.2em;
 }
+
+.aboutme {
+    margin: 5%;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+}
+
+.aboutme #heading{
+    align-self: center;
+}
+
+.aboutme #content{
+    display: flex;
+    flex-direction: row;
+    gap: 10%;
+    align-content: center;
+}
+
+.aboutme img{
+    border-radius: 10%;
+    width: 20%;
+}
