--- a/styles.css
+++ b/styles.css
@@ -156,3 +156,34 @@ header ul li a.active
     text-align: center;
     justify-content: center;
 }
+
+.projectcontainers{
+    display: flex;
+    flex-direction: row;
+    margin-top: 5%;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 10%;
+}
+
+.projectcontainers>div{
+    flex: 0 1 23%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 2%;
+    background-color: #575757;
+    border-radius: 4%;
+    margin-bottom: 5%;
+}
+
+.projectcontainers>div>img{
+    width: 30%;
+}
+
+.projectcontainers>div>h2{
+    text-align: center;
+    margin-bottom: 3%;
+}
