--- a/styles.css
+++ b/styles.css
@@ -4,12 +4,13 @@
     box-sizing: border-box;
     font-family: "Poppings", sans-serif;
     scroll-behavior: smooth;
-    color: #fff;
+    /* color: #ffffff; */
 }
 
 body {
     min-height: 100vh;
-    background: linear-gradient(#000000, hsl(248, 36%, 20%));
+    background: linear-gradient(#000000, hsl(0, 0%, 100%));
+    color: #fff;
 }
 
 header
@@ -186,4 +187,24 @@ header ul li a.active
 .projectcontainers>div>h2{
     text-align: center;
     margin-bottom: 3%;
+}
+
+
+.footer{
+    background-color: #ffffff;
+    color: #000000;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 10%;
+    padding: 2%;
+}
+.footer>h1{
+    flex: 1 0 100%;
+    text-align: center;
+    margin-bottom: 3%;
+}
+
+.footer #message{
+    flex:0 1 33%;
 }
