--- a/styles.css
+++ b/styles.css
@@ -191,7 +191,7 @@ header ul li a.active
 
 
 .footer{
-    background-color: #ffffff;
+    background-color: #fffb00;
     color: #000000;
     display: flex;
     flex-direction: row;
@@ -207,4 +207,18 @@ header ul li a.active
 
 .footer #message{
     flex:0 1 33%;
+}
+
+.footer #quicklinks h2{
+    margin-bottom: 10%;
+}
+
+.footer #quicklinks li{
+    margin: 5%;
+    list-style-type: none;
+}
+
+.footer #contactinfo li{
+    margin-top: 5%;
+    list-style-type: none;
 }
