--- a/styles.css
+++ b/styles.css
@@ -189,9 +189,38 @@ header ul li a.active
     margin-bottom: 3%;
 }
 
+.timeline {
+    display: flex;
+    flex-direction: column;
+    margin: 2%;
+}
+
+.timeline>h1{
+    text-align: center;
+    flex: 1 0 100%;
+    padding-top: 4%;
+    padding-bottom: 4%;
+}
+
+.timeline>div{
+    padding: 2%;
+    background-color: #948bd3;
+    border-radius: 20px;
+    opacity: 0.5;
+    transition: opacity 1s;
+    margin-bottom: 4%;
+    margin-right: 45%;
+}
+
+.timeline>div:hover{
+    opacity: 1;
+}
+.timeline>div>img{
+    width: 10%;
+}
 
 .footer{
-    background-color: #fffb00;
+    background-color: #d4d000;
     color: #000000;
     display: flex;
     flex-direction: row;
